# poetry-bert-formalism

./: .gitignore  COLAB_TRAINING_GUIDE.md  CORPUS_RECONSTRUCTION_AND_CLASSIFICATION_FIX.md  HIERARCHICAL_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  RESEARCH_PLAN.md  TODO.md  config.py  prosodic_features.py  pyproject.toml  requirements.txt  setup.py  setup_m4max.sh
Data/: eebo_sonnets_hierarchical_stats.json  eebo_sonnets_hierarchical_train.jsonl  eebo_sonnets_hierarchical_val.jsonl
archive/: ARCHIVE_BUILDING_STRATEGY.md  CURRENT_ARCHIVE_STATUS.md  PROJECT_STATUS.md  check_reconstruction.sh
claude_context/: ARCHITECTURE_CORRECT.md  PHASE3B_STATUS.md  PHASE4_PLAN.md  PRAGMATIC_WORKFLOW.md  START_HERE.md
corpus_samples/: gutenberg_ids.txt  shakespeare_sonnets_parsed.jsonl
docs/: AUDIT_RESULTS.md  COMPLETE_MODEL_PLAN.md  CORPUS_ENHANCEMENT_PLAN.md  CORPUS_SUMMARY.md  M4MAX_SETUP_GUIDE.md  M4MAX_SETUP_WALKTHROUGH.md  METADATA_SCHEMA.md  PHASE1_USAGE.md  PHASE2_SUMMARY.md  PHASE_3_PLAN.md  PHASE_3_PROGRESS.md  REORGANIZATION_PLAN.md  RESEARCH_PLAN.md  SYSTEM_AUDIT.md
notebooks/: Individual_Poem_Visualizer.ipynb  Metadata_Integration_Analysis.ipynb  client_secret.json  colab_bert_training.ipynb  complete_layered_analysis.ipynb  download_gutenberg_corpus.ipynb  hierarchical_bert_training_colab.ipynb  poetry_bert_training_full_pipeline.ipynb  poetry_eebo_bert_training.ipynb  shakespeare_sonnets_analysis.ipynb  shakespeare_sonnets_bert_analysis.ipynb
results/: eebo_vs_poetry_bert_contextual_comparison.csv  layer3_prosody_proof_of_concept.csv  (+8 more)
(+422 files in other folders)
